--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "taskmap is an itinerary creation tool",
   "main": "app.js",
   "dependencies": {
+    "angular": "^1.5.3",
+    "bootstrap": "^3.3.6",
     "connect": "^3.4.1",
-    "angularjs": "^0.0.1",
     "leaflet": "^0.7.7",
     "serve-static": "^1.10.2"
   },
