--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "angular": "^1.5.3",
     "bootstrap": "^3.3.6",
     "connect": "^3.4.1",
+    "jquery": "^2.2.3",
     "leaflet": "^0.7.7",
     "serve-static": "^1.10.2"
   },
