--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "module": "commonjs",
         "target": "es3",
         "noImplicitAny": false,
-        "outDir": "built",
+        "outFile": "index.js",
         "rootDir": ".",
         "sourceMap": false
     },
