removed leaflet map controller

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "noImplicitAny": false,
         "outDir": "built",
         "rootDir": ".",
-        "sourceMap": false
+        "sourceMap": false,
+        "listFiles": false
     },
     "exclude": [
         "node_modules"
