--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "module": "commonjs",
         "target": "es3",
         "noImplicitAny": false,
-        "outDir": "built",
+        "outDir": "scripts",
         "rootDir": ".",
         "sourceMap": false,
         "listFiles": false
