edited git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # dev files #
 ################
 node_modules/
+!node_modules/jquery/dist/jquery.js
+!node_modules/angular/angular.min.js
+!node_modules/bootstrap/dist/js/bootstrap.min.js
+!node_modules/leaflet/dist/leaflet.js
+!node_modules/leaflet/dist/leaflet.css
+!node_modules/bootstrap/dist/css/bootstrap.min.css
 .vscode
 tasks.json
 
