--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "outDir": "scripts",
         "rootDir": ".",
         "sourceMap": false,
-        "listFiles": false
+        "listFiles": true
     },
     "exclude": [
         "node_modules"
